--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: wordpress-argo-app
-  namespace: wordpress
+  namespace: argocd
 spec:
   project: default
  
