--- a/definitions/mysql-deployment.yaml
+++ b/definitions/mysql-deployment.yaml
@@ -3,18 +3,18 @@ kind: Deployment
 metadata:
   name: wordpress-mysql
   labels:
-    app: wordpress-app
+    app: wordpress
 spec:
   selector:
     matchLabels:
-      app: wordpress-app
+      app: wordpress
       tier: mysql
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: wordpress-app
+        app: wordpress
         tier: mysql
     spec:
       containers:
