--- a/definitions/mysql-service.yaml
+++ b/definitions/mysql-service.yaml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   name: wordpress-mysql
   labels:
-    app: wordpress-app
+    app: wordpress
 spec:
   ports:
     - port: 3306
   selector:
-    app: wordpress-app
+    app: wordpress
     tier: mysql
   clusterIP: None
