--- a/definitions/wordpress-deployment.yaml
+++ b/definitions/wordpress-deployment.yaml
@@ -31,8 +31,9 @@ spec:
         - name: WORDPRESS_DB_USER
           value: wordpress
         ports:
-        - containerPort: 80
-          name: wordpress
+        - containerPort: 5000
+          protocol: TCP
+          name: http
         volumeMounts:
         - name: wordpress-persistent-storage
           mountPath: /var/www/html
