--- a/definitions/wordpress-service.yaml
+++ b/definitions/wordpress-service.yaml
@@ -6,8 +6,10 @@ metadata:
     app: wordpress
 spec:
   ports:
-    - port: 80
-      name: wordpress
+    - port: 5000
+      protocol: TCP
+      name: http
+      targetPort: http
   selector:
     app: wordpress
     tier: frontend
