--- a/definitions/wordpress-deployment.yaml
+++ b/definitions/wordpress-deployment.yaml
@@ -31,9 +31,8 @@ spec:
         - name: WORDPRESS_DB_USER
           value: wordpress
         ports:
-        - containerPort: 5000
-          protocol: TCP
-          name: http
+        - containerPort: 80
+          name: wordpress
         volumeMounts:
         - name: wordpress-persistent-storage
           mountPath: /var/www/html
